Minor fixes/tweaks